change name package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "ast/violators-report",
+  "name": "ltd_ast/violators-report",
   "type": "library",
   "license": "MIT",
   "version": "1.0.0",
