--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,11 @@
   },
   "scripts": {
     "test": "vendor/bin/phpunit -c ./phpunit.xml --colors=always",
-    "analysis": "vendor/bin/phpstan analyse"
+    "analysis": "vendor/bin/phpstan analyse",
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover --ansi",
+      "@php artisan vendor:publish --tag=export_templates --force"
+    ]
   }
 }
