--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
     "post-autoload-dump": [
       "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
       "@php artisan package:discover --ansi",
-      "@php artisan vendor:publish --tag=export_templates --force"
+      "@php artisan vendor:publish --tag=export_template --force"
     ]
   }
 }
