--- a/composer.json
+++ b/composer.json
@@ -41,12 +41,6 @@
   },
   "scripts": {
     "test": "vendor/bin/phpunit -c ./phpunit.xml --colors=always",
-    "analysis": "vendor/bin/phpstan analyse",
-    "post-package-install": [
-      "php artisan vendor:publish --tag=export-template --force"
-    ],
-    "post-package-update": [
-      "php artisan vendor:publish --tag=export-template --force"
-    ]
+    "analysis": "vendor/bin/phpstan analyse"
   }
 }
